--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ env:
   global:
     - "ARTIFACTS_AWS_REGION=us-east-1"
     - "ARTIFACTS_S3_BUCKET=travis-s3-us-01"
-    - secure: ZhvRET5CEgYtZY5z8nUDjcpqthkVb6yc/qBi/re+EOaLgx1nVFSf5G6uHEVqlzNka5F67KT+kV0Ph3WqoT9d3X10IAiH2cdvG/gsZxJi8pXn+A0A1f9I4wnsvlSDmgHG46JjWb7nz6VqKb5WC54eVEEZ2kPlkQPmXZ5r9QbanCs=
-    - secure: ioXW769alaD/b2QrPyzRgRV/k/7p5TmtuRDKQmLFa5wcAkLiuWa6VzaMMdc5VroK4hEsMvJdxJJtrneZEyPluiVntL59TW5OO5OzDVrxZInlXRLCW1jSwi2BkzdezNfS5g6X3nv3d/YOz4pci/KbLmiDVwOt+LWEjymOqLarVpA=
+    - secure: "ZhvRET5CEgYtZY5z8nUDjcpqthkVb6yc/qBi/re+EOaLgx1nVFSf5G6uHEVqlzNka5F67KT+kV0Ph3WqoT9d3X10IAiH2cdvG/gsZxJi8pXn+A0A1f9I4wnsvlSDmgHG46JjWb7nz6VqKb5WC54eVEEZ2kPlkQPmXZ5r9QbanCs="
+    - secure: "ioXW769alaD/b2QrPyzRgRV/k/7p5TmtuRDKQmLFa5wcAkLiuWa6VzaMMdc5VroK4hEsMvJdxJJtrneZEyPluiVntL59TW5OO5OzDVrxZInlXRLCW1jSwi2BkzdezNfS5g6X3nv3d/YOz4pci/KbLmiDVwOt+LWEjymOqLarVpA="
+    - secure: "U9q/v5DwZtVmRYjczFWIu49AP1RDBvWZasj+cqE+qUN+z8k7F+WvFlpoBfguKyT4utxlQCeu/2cUxz3v++Ab3mjdgtAumtqSZVcklNPduah2wiXyg4jz65FLemgRSlWTGDFsc5EcIBwk4OUZFdguikiAJGVtiY5VTfv/0kW5P1w="
 
 language: php
 
@@ -30,8 +31,9 @@ notifications:
     
 install:
   - bundle install --path vendor/bundler
+  - composer config --global github-oauth.github.com $GITHUB_API_TOKEN
   - composer selfupdate
-  - composer install -o
+  - composer install -o -n --prefer-source
   - php -i
 
 before_script:
