--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "support": {
         "email": "charlesportwoodii@ethreal.net",
         "issues": "https://github.com/charlesportwoodii/CiiMS/issues",
-        "wiki": "https://github.com/charlesportwoodii/CiiMS/wiki/_pages",
+        "wiki": "https://docs.ciims.io",
         "source": "https://github.com/charlesportwoodii/CiiMS"
     },
     "homepage": "https://www.ciims.io",
@@ -69,8 +69,8 @@
         "charlesportwoodii/yii-newrelic": "1.0.1",
         "charlesportwoodii/cii": "1.0.22",
         "ciims-themes/default": "3.0.19",
-        "ciims-modules/dashboard": "3.0.25",
-        "ciims-modules/api": "2.0.20",
+        "ciims-modules/dashboard": "3.0.26",
+        "ciims-modules/api": "2.0.21",
         "ciims-modules/install": "2.0.11",
         "ciims-modules/hybridauth": "2.0.6",
         "ciims-plugins/awsuploader": "1.0.3",
