--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ public_html
 /protected/runtime/*
 /protected/assets
 /protected/config/*
+/protected/test/_logs
 !/themes/default
 /protected/modules/*
 /uploads/*
