--- a/composer.json
+++ b/composer.json
@@ -70,10 +70,10 @@
         "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.5",
         "charlesportwoodii/yii-newrelic": "1.0.1",
-        "charlesportwoodii/cii": "1.0.25",
+        "charlesportwoodii/cii": "dev-webroot",
         "ciims-themes/default": "3.0.20",
-        "ciims-modules/dashboard": "3.0.26",
-        "ciims-modules/api": "2.0.22",
+        "ciims-modules/dashboard": "dev-webroot",
+        "ciims-modules/api": "dev-webroot",
         "ciims-modules/install": "2.0.12",
         "ciims-modules/hybridauth": "2.0.6",
         "ciims-plugins/awsuploader": "1.0.3",
