--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .AppleDouble
 public_html
 /assets/*
+/web/assets/*
 /vendor/*
 /themes/*
 /protected/runtime/*
@@ -10,6 +11,7 @@ public_html
 !/themes/default
 /protected/modules/*
 /uploads/*
+/web/uploads/*
 .htaccess
 *.*~
 *.swp
