--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
 
 before_script:
   - mysql -e 'create database ciims_travis;'
-  - php index.php installer index --dbHost=127.0.0.1 --dbName=ciims_travis --dbUsername=root --dbPassword="" --adminEmail="travis@ciims.io" --adminPassword=travis --adminUsername=travis --siteName="CiiMS - Travis CI" --force=0 --writeConfig=1 --debug=1
+  - php web/index.php installer index --dbHost=127.0.0.1 --dbName=ciims_travis --dbUsername=root --dbPassword="" --adminEmail="travis@ciims.io" --adminPassword=travis --adminUsername=travis --siteName="CiiMS - Travis CI" --force=0 --writeConfig=1 --debug=1
 
 after_failure: # Upload the application.log on failure
   - "bundle exec travis-artifacts upload --path protected/runtime/application.log"
