Updating test suite to work with api, dashboard, and install module, cii component
Updating travis-ci build process

Versioning dependencies

--- a/composer.json
+++ b/composer.json
@@ -70,11 +70,11 @@
         "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.5",
         "charlesportwoodii/yii-newrelic": "1.0.1",
-        "charlesportwoodii/cii": "dev-webroot",
+        "charlesportwoodii/cii": "1.0.26",
         "ciims-themes/default": "3.0.20",
-        "ciims-modules/dashboard": "dev-webroot",
-        "ciims-modules/api": "dev-webroot",
-        "ciims-modules/install": "2.0.12",
+        "ciims-modules/dashboard": "3.0.27",
+        "ciims-modules/api": "2.0.23",
+        "ciims-modules/install": "2.0.13",
         "ciims-modules/hybridauth": "2.0.6",
         "ciims-plugins/awsuploader": "1.0.3",
         "zhuravljov/yii2-debug": "v1.4",
