--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "source": "https://github.com/charlesportwoodii/CiiMS"
     },
     "homepage": "https://www.ciims.io",
+	"prefer-stable": true,
     "minimum-stability": "dev",
     "repositories": [
         {
@@ -74,7 +75,7 @@
         "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.5",
         "charlesportwoodii/yii-newrelic": "1.0.1",
-        "charlesportwoodii/cii": "1.0.27",
+        "charlesportwoodii/cii": "1.0.28",
         "ciims-themes/default": "3.0.20",
         "ciims-modules/dashboard": "3.0.28",
         "ciims-modules/api": "2.0.24",
