Fixing autoinstall loader issuer where composer couldn't run post-root-install command

--- a/composer.json
+++ b/composer.json
@@ -99,9 +99,7 @@
     },
 	"scripts": {
 		"post-install-cmd": "php ./vendor/ciims/requirements/index.php",
-		"post-update-cmd": "php ./vendor/ciims/requirements/index.php",
-		"post-root-package-install": "php ./vendor/ciims/requirements/index.php",
-		"post-create-project-cmd": "php ./vendor/ciims/requirements/index.php"
+		"post-update-cmd": "php ./vendor/ciims/requirements/index.php"
 	},
     "extra": {
         "installer-paths": {
