Using Xenail box since Trusty is broken.

--- a/protected/config/vagrant-nginx.conf
+++ b/protected/config/vagrant-nginx.conf
@@ -32,7 +32,7 @@ server {
 
     location ~ [^/]\.php(/|$) {
         fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-        fastcgi_pass   backend;
+        fastcgi_pass   php70;
         fastcgi_index  index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
